<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/ic_baseline_add_circle_outline_24"
            android:title="@string/menu_registro" />

        <item
            android:id="@+id/nav_apoyo"
            android:icon="@drawable/ic_baseline_mood_24"
            android:title="@string/menu_apoyo" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_perfil"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_fullscreen_exit_24"
            android:title="@string/menu_exit" />
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logoff" />
    </group>
</menu>
