<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8D0F1"
    android:orientation="vertical"
    tools:context=".ui.perfil.perfil">

    <androidx.cardview.widget.CardView
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="165dp"
            android:layout_height="153dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />
        />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_background"
            android:text="@string/btBuscar"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btSubir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_background"
            android:text="@string/bt_Subir"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tvNombre"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#737373" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tvEdad"
            android:inputType="number|textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#737373" />

    </LinearLayout>

</LinearLayout>