<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8D0F1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="180dp"
        android:text="@string/tvUsuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#231f20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="169dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#151515"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/tvContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#231f20"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:shadowColor="#FFFFFF"
        android:textColor="#151515"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario"
        app:layout_constraintVertical_bias="0.416" />

    <ImageButton
        android:id="@+id/btRegistrar"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#231f20"
        android:onClick="registra"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña"
        app:srcCompat="@drawable/ic_baseline_person_add_24" />

    <ImageButton
        android:id="@+id/btIngresar"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#231f20"
        android:onClick="ingresa"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/btRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña"
        app:srcCompat="@drawable/ic_login" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvBienvenido"
        android:textColor="#231F20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.123" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/drinklogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>